<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentLesson</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="resume">Resume</string>
    <string name="settings">Settings</string>
    <string name="mylist">My list</string>
    <string name="username">User name</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logout">Log out</string>

</resources>
